Enlaces a paginas funcionando

--- a/direccion.html
+++ b/direccion.html
@@ -17,20 +17,19 @@
             <li><a href="./index.html">Inicio</a></li>
             <li><a href="./direccion.html">Direccion</a></li>
             <li><a href="./reparto.html">Reparto</a></li>
-            <li><a href="./galeria">Galeria</a></li>
-            <li><a href="./videos">Videos</a></li>
+            <li><a href="./galeria.html">Galeria</a></li>
+            <li><a href="./videos.html">Videos</a></li>
           </ul>
         </nav>
       </header>
 
-      <div class="director"></div><h1>EL DIRECTOR</h1></div>
+      <div class="director"><h1>EL DIRECTOR</h1>
       <div class="flexContenedor">
         <div class="txtImage">
             <img src="../img/Kubrick.jpg" alt="Resplandor">
         </div>
         <div class="txtTributo">
             <h1>Stanley Kubrick</h1>
-            <h3>The Shining.</h3>
             <br>
             <p>Stanley Kubrick (Manhattan, Nueva York, 26 de julio de 1928-St Albans, Reino Unido, 7 de marzo de 1999) fue un director 
                 de cine, guionista, productor y fotógrafo estadounidense nacionalizado británico. Considerado por muchos como uno de 
@@ -65,6 +64,7 @@
                     nominación al Óscar, en las categorías Mejor director y guion adaptado.</p>
         </div>
       </div> 
+    </div>
 
     <footer class="pie-pagina">
         <p>Autores: Jesus & Jorge</p>
