--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
           <ul>
             <li><a href="#inicio">Inicio</a></li>
             <li><a href="./direccion.html">Direccion</a></li>
-            <li><a href="#Reparto">Reparto</a></li>
-            <li><a href="#Galeria">Galeria</a></li>
-            <li><a href="#Videos">Videos</a></li>
+            <li><a href="./reparto.html">Reparto</a></li>
+            <li><a href="./valeria.html">Galeria</a></li>
+            <li><a href="./videos.html">Videos</a></li>
           </ul>
         </nav>
       </header>
