Cambios en Galeria. Efecto con JavaScript

--- a/direccion.html
+++ b/direccion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/director.css">
     <title>Tributo a El Resplandor</title>
 </head>
 <body>
@@ -23,9 +23,9 @@
         </nav>
       </header>
 
-      <div class="director"><h1>EL DIRECTOR</h1>
+      <div class="director"><h1>EL DIRECTOR</h1></div>
       <div class="flexContenedor">
-        <div class="txtImage">
+            <div class="txtImage">
             <img src="../img/Kubrick.jpg" alt="Resplandor">
         </div>
         <div class="txtTributo">
@@ -64,7 +64,6 @@
                     nominación al Óscar, en las categorías Mejor director y guion adaptado.</p>
         </div>
       </div> 
-    </div>
 
     <footer class="pie-pagina">
         <p>Autores: Jesus & Jorge</p>
