CAmbios en Galeria de Fotos

--- a/direccion.html
+++ b/direccion.html
@@ -23,10 +23,10 @@
         </nav>
       </header>
 
-      <div class="director"></div><h1>EL DIRECTOR</h1></div>
+      <div class="director"><h1>EL DIRECTOR</h1></div>
       <div class="flexContenedor">
         <div class="txtImage">
-            <img src="../img/Kubrick.jpg" alt="Resplandor">
+            <img src="img/Kubrick.jpg" alt="Resplandor">
         </div>
         <div class="txtTributo">
             <h1>Stanley Kubrick</h1>
