--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         </div>
         <nav>
           <ul>
-            <li><a href="#inicio">Inicio</a></li>
-            <li><a href="./direccion.html">Direccion</a></li>
-            <li><a href="#Reparto">Reparto</a></li>
-            <li><a href="#Galeria">Galeria</a></li>
-            <li><a href="#Videos">Videos</a></li>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="direccion.html">Direccion</a></li>
+            <li><a href="reparto.html">Reparto</a></li>
+            <li><a href="galeria.html">Galeria</a></li>
+            <li><a href="videos.html">Videos</a></li>
           </ul>
         </nav>
       </header>
