--- a/direccion.html
+++ b/direccion.html
@@ -23,7 +23,7 @@
         </nav>
       </header>
 
-      <div class="director"><h1>EL DIRECTOR</h1></div>
+      <div class="director"><h1 class="txtDirector">EL DIRECTOR</h1></div>
       <div class="flexContenedor">
         <div class="txtImage">
             <img src="img/Kubrick.jpg" alt="Resplandor">
