--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         </div>
       </section>
 
+      <hr class="separate"/>
+
+      
       <div class="flexContenedor">
         <div class="txtImage">
             <img src="../img/resplandorTrailer.jpg" alt="Resplandor">
