--- a/reparto.html
+++ b/reparto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/reparto.css">
     <title>Tributo a El Resplandor</title>
 </head>
 <body>
@@ -23,14 +23,13 @@
         </nav>
       </header>
 
-      <div class="director"><h1>EL PROTAGONISTA</h1></div>
-      <div class="flexContenedor">
-        <div class="txtImage">
+      <div class="protas"><h1 class="txtProtas">EL PROTAGONISTA</h1></div>
+      <div class="flexConten">
+        <div class="imgProtas">
             <img src="img/nickolson.jpg" alt="Resplandor">
         </div>
-        <div class="txtTributo">
+        <div class="txtBio">
             <h1>Jack Nicholson</h1>
-            <br>
             <p>Biografía</p>
             <p>Primeros años</p>
               
@@ -57,14 +56,13 @@
 
       <hr class="separate"/>
 
-      <div class="director"><h1>LA PROTAGONISTA</h1></div>
-      <div class="flexContenedor">
-        <div class="txtImage">
+      <div class="protas"><h1 class="txtProtas">LA PROTAGONISTA</h1></div>
+      <div class="flexConten">
+        <div class="imgProtas2">
             <img src="img/duvvall.jpg" alt="Resplandor">
         </div>
-        <div class="txtTributo">
+        <div class="txtBio">
             <h1>Shelley Duvall</h1>
-            <br>
             <p>Biografía</p>
             <p>La trayectoria de Duvall ha sido diversa y entre sus películas se destacan la versión 
               para la pantalla grande de Popeye, Nashville, Annie Hall, Tres mujeres (por la que 
@@ -83,7 +81,8 @@
               años buscándola, se reunió con ella y confirmó que Duvall era capaz de mantener largas conversaciones 
               coherentes.</p>
 
-              <p>En 2022 actuó en la película The Forest Hills del director Scott Goldberg, cuyo estreno está previsto para 2023</p>
+              <p>En 2022 actuó en la película The Forest Hills del director Scott Goldberg, cuyo estreno está previsto 
+                para 2023</p>
         </div>
       </div> 
   
