video hidden and foot bottom 0

--- a/videos.html
+++ b/videos.html
@@ -62,32 +62,14 @@
       </div>
 
       <section id="video">
-        <div class="flexContainer">
+        <div id="video_content" class="flexContainer">
           <div class="video_container">   
           <iframe width="720" height="480" src="https://www.youtube.com/embed/5gMkGbyEnag" title="Gemelas (escena) El resplandor" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
           </div>
           <div class="text_container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque
-              amet numquam quisquam culpa placeat sed, corporis doloribus iusto
-              maiores tenetur eaque. Ipsum necessitatibus delectus ad in
-              temporibus quaerat quos, praesentium, perferendis quis quia
-              fugiat, incidunt officia minima repellendus assumenda! Error quis
-              perspiciatis quasi ipsam culpa accusantium accusamus tempora
-              recusandae laboriosam ut facilis, neque exercitationem sint, ipsum
-              earum. Tempora asperiores iusto cum voluptatum pariatur voluptates
-              sed ex, distinctio dicta, sint iste atque fugiat reprehenderit
-              iure repellat praesentium ipsum. Laboriosam delectus non
-              consequuntur et modi autem, quam sunt perferendis eligendi soluta
-              dolorum voluptatibus sapiente veritatis eaque, similique ipsa!
-              Rerum ipsum nemo iusto doloribus, dolorem exercitationem pariatur
-              dolore a odio, necessitatibus, mollitia possimus perspiciatis
-              cupiditate alias cumque. Ut tempore cum sapiente inventore
-              quibusdam. Unde tempora corporis laborum provident neque quasi,
-              sed iure accusantium ratione praesentium placeat accusamus
-              deserunt deleniti molestias tempore expedita cumque necessitatibus
-              aut quam! Nam atque voluptatum provident, sunt reprehenderit
-              natus?
+              Lisa y Louise Burns tenían diez años cuando rodaron una de las secuencias más icónicas del cine de terror en El resplandor (1980). En la película de culto de Stanley Kubrick encarnaban a las gemelas Grady, que aparecían por sorpresa al fondo de un pasillo del hotel Overlook por el que montaba en triciclo Danny Torrance (Danny Lloyd), el hijo pequeño del inquietante personaje que interpretaba Jack Nicholson. Con sus manos unidas y ataviadas con unos vestidos azul celeste miraban con rostro siniestro y fijo al niño.
+              
             </p>
           </div>
         </div>
