--- a/videos.html
+++ b/videos.html
@@ -56,6 +56,30 @@
             alt="Critica"
           />
         </div>
+
+        <div class="showSlider fade">
+          <img
+            class="showSlider__image"
+            src="img/galVideo/jack2.jpg"
+            alt="Critica"
+          />
+        </div>
+
+        <div class="showSlider fade">
+          <img
+            class="showSlider__image"
+            src="img/galVideo/jack3.jpg"
+            alt="Critica"
+          />
+        </div>
+
+        <div class="showSlider fade">
+          <img
+            class="showSlider__image"
+            src="img/galVideo/jack4.jpg"
+            alt="Critica"
+          />
+        </div> 
         <!-- Navigation arrows -->
         <a class="left" onclick="previousSlide()">❮</a>
         <a class="right" onclick="nextSlide()">❯</a>
@@ -63,13 +87,28 @@
 
       <section id="video">
         <div id="video_content" class="flexContainer">
-          <div class="video_container">   
-          <iframe width="720" height="480" src="https://www.youtube.com/embed/5gMkGbyEnag" title="Gemelas (escena) El resplandor" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <div class="video_container">
+            <iframe class="video_container__iframe"
+              width="720"
+              height="480"
+              src="https://www.youtube.com/embed/5gMkGbyEnag"
+              title="Gemelas (escena) El resplandor"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
           </div>
           <div class="text_container">
             <p>
-              Lisa y Louise Burns tenían diez años cuando rodaron una de las secuencias más icónicas del cine de terror en El resplandor (1980). En la película de culto de Stanley Kubrick encarnaban a las gemelas Grady, que aparecían por sorpresa al fondo de un pasillo del hotel Overlook por el que montaba en triciclo Danny Torrance (Danny Lloyd), el hijo pequeño del inquietante personaje que interpretaba Jack Nicholson. Con sus manos unidas y ataviadas con unos vestidos azul celeste miraban con rostro siniestro y fijo al niño.
-              
+              Lisa y Louise Burns tenían diez años cuando rodaron una de las
+              secuencias más icónicas del cine de terror en El resplandor
+              (1980). En la película de culto de Stanley Kubrick encarnaban a
+              las gemelas Grady, que aparecían por sorpresa al fondo de un
+              pasillo del hotel Overlook por el que montaba en triciclo Danny
+              Torrance (Danny Lloyd), el hijo pequeño del inquietante personaje
+              que interpretaba Jack Nicholson. Con sus manos unidas y ataviadas
+              con unos vestidos azul celeste miraban con rostro siniestro y fijo
+              al niño.
             </p>
           </div>
         </div>
