Cambios en Videos  y CSS Galeria

--- a/galeria.html
+++ b/galeria.html
@@ -29,7 +29,7 @@
     <div class="flexGalery">
       <div class="fila">
         <img src="../img/galeria/kubrick.jpg" alt="Resplandor" />
-        <img src="../img/galeria/jack.jpg" alt="Resplandor" />
+        <img id="imgJack" src="../img/galeria/jack.jpg" alt="Resplandor" />
         <img src="../img/galeria/duvall.jpg" alt="Resplandor" />
         <img src="../img/galeria/hotel.jpg" alt="Resplandor" />
       </div>
