--- a/galeria.html
+++ b/galeria.html
@@ -56,7 +56,7 @@
     </div>
   </div>
 
-  <footer class="pie-pagina">
+  <footer class="foot">
     <p>Autores: Jesus & Jorge</p>
     <p>&copy; 2023 - Todos los derechos reservados</p>
   </footer>
