--- a/videos.html
+++ b/videos.html
@@ -106,7 +106,7 @@
       </section>
     </main>
 
-    <footer class="pie-pagina">
+    <footer class="foot">
       <p>Autores: Jesus & Jorge</p>
       <p>&copy; 2023 - Todos los derechos reservados</p>
     </footer>
