--- a/direccion.html
+++ b/direccion.html
@@ -24,7 +24,7 @@
       </header>
 
       <div class="director"><h1 class="txtDirector">EL DIRECTOR</h1></div>
-      <div class="flexContenedor">
+      <div class="flexContainerDirector">
         <div class="txtImage">
             <img src="img/Kubrick.jpg" alt="Resplandor">
         </div>
@@ -65,7 +65,7 @@
         </div>
       </div> 
 
-    <footer class="pie-pagina">
+    <footer class="foot">
         <p>Autores: Jesus & Jorge</p>
         <p>&copy; 2023 - Todos los derechos reservados</p>
       </footer>
