--- a/reparto.html
+++ b/reparto.html
@@ -98,7 +98,7 @@
 
       
   
-      <footer class="pie-pagina">
+      <footer class="foot">
         <p>Autores: Jesus & Jorge</p>
         <p>&copy; 2023 - Todos los derechos reservados</p>
       </footer>
