Cambio en ruta imagenes de 2 puntos a 1 punto

--- a/galeria.html
+++ b/galeria.html
@@ -28,30 +28,30 @@
     <h1>GALERIA</h1>
     <div class="flexGalery">
       <div class="fila">
-        <img src="../img/galeria/kubrick.jpg" alt="Resplandor" />
-        <img id="imgJack" src="../img/galeria/jack.jpg" alt="Resplandor" />
-        <img src="../img/galeria/duvall.jpg" alt="Resplandor" />
-        <img src="../img/galeria/hotel.jpg" alt="Resplandor" />
+        <img src="./img/galeria/kubrick.jpg" alt="Resplandor" />
+        <img id="imgJack" src="./img/galeria/jack.jpg" alt="Resplandor" />
+        <img src="./img/galeria/duvall.jpg" alt="Resplandor" />
+        <img src="./img/galeria/hotel.jpg" alt="Resplandor" />
       </div>
 
       <div class="fila">
-        <img src="../img/galeria/danny.jpg" alt="Resplandor" />
-        <img id="imgScatman" src="../img/galeria/scatman.jpg" alt="Scatman" />
+        <img src="./img/galeria/danny.jpg" alt="Resplandor" />
+        <img id="imgScatman" src="./img/galeria/scatman.jpg" alt="Scatman" />
         <div id="myModal" class="modal">
           <span class="close">&times;</span>
           <img class="modal-content" id="img01">
           <div id="caption"></div>
           <div id="name"></div>
         </div>
-        <img src="../img/galeria/danny2.jpg" alt="Resplandor" />
-        <img src="../img/galeria/jackNno.jpg" alt="Resplandor" />
+        <img src="./img/galeria/danny2.jpg" alt="Resplandor" />
+        <img src="./img/galeria/jackNno.jpg" alt="Resplandor" />
       </div>
 
       <div class="fila">
-        <img src="../img/galeria/cerdo.jpg" alt="Resplandor" />
-        <img src="../img/galeria/beso.jpg" alt="Resplandor" />
-        <img src="../img/galeria/caraRajada.jpg" alt="Resplandor" />
-        <img src="../img/galeria/hacha.jpg" alt="Resplandor" />
+        <img src="./img/galeria/cerdo.jpg" alt="Resplandor" />
+        <img src="./img/galeria/beso.jpg" alt="Resplandor" />
+        <img src="./img/galeria/caraRajada.jpg" alt="Resplandor" />
+        <img src="./img/galeria/hacha.jpg" alt="Resplandor" />
       </div>
     </div>
   </div>
