--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-         <img src="../img/logoResplandor.svg.png" alt="Logo de El resplandor">
+         <img src="./img/logoResplandor.svg.png" alt="Logo de El resplandor">
         </div>
         <nav>
           <ul>
@@ -26,13 +26,13 @@
   <section class="banner">
     <div class="imagen-banner">
         <div class="texto-banner"><h2>EL RESPLANDOR</h2></div>
-        <img src="../img/resplandorPortada.jpg" alt="Resplandor Banner">
+        <img src="./img/resplandorPortada.jpg" alt="Resplandor Banner">
     </div>
   </section>
 
   <div class="flexContainer">
     <div class="txtImage">
-        <img src="../img/resplandorTrailer.jpg" alt="Resplandor">
+        <img src="./img/resplandorTrailer.jpg" alt="Resplandor">
     </div>
     <div class="txtTributo">
         <h1>El resplandor (película)</h1>
