--- a/galeria.html
+++ b/galeria.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-         <img src="../img/logoResplandor.svg.png" alt="Logo de El resplandor">
+         <img src="./img/logoResplandor.svg.png" alt="Logo de El resplandor">
         </div>
         <nav>
           <ul>
