--- a/videos.html
+++ b/videos.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <div class="logo">
-      <img src="../img/logoResplandor.svg.png" alt="Logo de El resplandor" />
+      <img src="./img/logoResplandor.svg.png" alt="Logo de El resplandor" />
     </div>
     <nav>
       <ul>
