--- a/direccion.html
+++ b/direccion.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">
-         <img src="../img/logoResplandor.svg.png" alt="Logo de El resplandor">
+         <img src="img/logoResplandor.svg.png" alt="Logo de El resplandor">
         </div>
         <nav>
           <ul>
