--- a/direccion.html
+++ b/direccion.html
@@ -15,11 +15,11 @@
         </div>
         <nav>
           <ul>
-            <li><a href="./index.html">Inicio</a></li>
-            <li><a href="./direccion.html">Direccion</a></li>
-            <li><a href="./reparto.html">Reparto</a></li>
-            <li><a href="./galeria.html">Galeria</a></li>
-            <li><a href="./videos.html">Videos</a></li>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="direccion.html">Direccion</a></li>
+            <li><a href="reparto.html">Reparto</a></li>
+            <li><a href="galeria.html">Galeria</a></li>
+            <li><a href="videos.html">Videos</a></li>
           </ul>
         </nav>
       </header>
